* Bug fixing in the header display on mobile devices *

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,8 @@ h1 {
 
 #profile-name {
     color: black;
+
+
 }
 
 #header-section {
@@ -29,10 +31,6 @@ h1 {
 header {
     background-image: url('https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80');
     border-radius: 5px;
-    margin-bottom: 5%;
-
-
-
 }
 
 #profile-pic {
@@ -40,7 +38,6 @@ header {
     width: 125px;
     height: 125px;
     border: 8px white solid;
-    transform: translatey(30%);
 }
 
 #about-section {
